[UPDATE] add tag support

--- a/assets/static/sass/_style.scss
+++ b/assets/static/sass/_style.scss
@@ -22,6 +22,7 @@
 
 @import "./components/articles/post";
 @import "./components/articles/banner";
+@import "./components/articles/breadcrumb";
 
 @import "./components/post/post_content";
 @import "./components/post/post_content_large";
@@ -32,6 +33,7 @@
 @import "./components/post/toc";
 @import "./components/post/adjacent_post";
 @import "./components/post/modal";
+@import "./components/post/tag";
 
 @import "./components/portfolio/banner";
 
