--- a/assets/static/sass/helper/_variables.scss
+++ b/assets/static/sass/helper/_variables.scss
@@ -27,6 +27,7 @@ $about-card-link-color: rgb(246, 255, 169);
 $more-card-hover-color: $default-ui-color;
 
 $articles-page-color: rgb(244, 249, 255);
+$articles-breadcrumb-color: rgb(233, 241, 251);
 $articles-ui-color: rgb(9, 36, 61);
 $articles-title-color: rgb(3, 48, 26);
 $articles-banner-color1: rgb(140, 251, 255);
@@ -53,6 +54,9 @@ $postpage-link-color: rgb(27, 177, 89);
 $postpage-quote-color: rgb(66, 177, 112);
 $postpage-quote-header-color: rgb(66, 177, 158);
 $postpage-quote-marker-color: rgb(59, 128, 43);
+$postpage-tag-border-color: rgb(102, 212, 138);
+$postpage-tag-color: rgb(217, 247, 215);
+$postpage-tag-hover-color: rgb(228, 252, 227);
 
 $portfolio-banner-color1: rgb(255, 151, 103);
 $portfolio-banner-color2: rgb(255, 253, 158);
