--- a/templates/macros/card.html
+++ b/templates/macros/card.html
@@ -29,7 +29,8 @@
     <article>
       <div class="info">
         <h2>{{ post.title }}</h2>
-        <time>{{ post.pub_date.strftime('%Y - %m - %d') }}</time>
+{#        <time>{{ post.pub_date.strftime('%Y - %m - %d') }}</time>#}
+        <time>{{ post.pub_date|dateformat('Y - MM - dd') }}</time>
       </div>
       <p class="preview">
         {{ post.body|striphtmltags|truncate(500) }}
