--- a/templates/macros/post.html
+++ b/templates/macros/post.html
@@ -4,7 +4,7 @@
     <div class="meta-data">
       <span class="author"><i class="fas fa-feather-alt"></i> {{ post.author }}</span>
       <time class="publish-date">
-        <i class="fas fa-at"></i> {{ post.pub_date.strftime('%Y - %m - %d') }}
+        <i class="fas fa-at"></i> {{ post.pub_date|dateformat('Y - MM - dd') }}
       </time>
     </div>
   </section>
@@ -13,23 +13,37 @@
 {% macro render_adj_post(post) %}
   {% set siblings = post.get_siblings() %}
   <section class="adjacent-posts">
-  {% if siblings.prev_page %}
-    <div class="next">
-      <span>Next Post</span>
-      <a href="{{ siblings.prev_page|url }}">
-        <h3>{{ siblings.prev_page.title }} <i class="fas fa-chevron-right"></i></h3>
-      </a>
-    </div>
-  {% endif %}
-  {% if siblings.next_page %}
-    <div class="prev">
-      <span>Prev Post</span>
-      <a href="{{ siblings.next_page|url }}">
-        <h3><i class="fas fa-chevron-left"></i> {{ siblings.next_page.title }}</h3>
-      </a>
-    </div>
-  {% endif %}
+    {% if siblings.prev_page %}
+      <div class="next">
+        <span>Next Post</span>
+        <a href="{{ siblings.prev_page|url }}">
+          <h3>{{ siblings.prev_page.title }} <i class="fas fa-chevron-right"></i></h3>
+        </a>
+      </div>
+    {% endif %}
+    {% if siblings.next_page %}
+      <div class="prev">
+        <span>Prev Post</span>
+        <a href="{{ siblings.next_page|url }}">
+          <h3><i class="fas fa-chevron-left"></i> {{ siblings.next_page.title }}</h3>
+        </a>
+      </div>
+    {% endif %}
   </section>
+{% endmacro %}
+
+{% macro render_tag_list(post) %}
+    {% if post.tags %}
+      <ul class="tags">
+        {% for t in post.tags -%}
+          <li>
+            <a href="{{ ('/articles@tag/' ~ t)|url }}">
+              {{ t }}
+            </a>
+          </li>
+        {% endfor %}
+      </ul>
+    {% endif %}
 {% endmacro %}
 
 {% macro render_post(post) %}
@@ -37,5 +51,6 @@
   <section class="post-content">
     {{ post.body }}
   </section>
+  {{ render_tag_list(post) }}
   {{ render_adj_post(post) }}
 {% endmacro %}
