[UPDATE] styles for 404 page

--- a/assets/static/sass/_style.scss
+++ b/assets/static/sass/_style.scss
@@ -37,8 +37,11 @@
 
 @import "./components/portfolio/banner";
 
+@import "./components/error_404/banner";
+
 @import "./layout/root";
 @import "./layout/homepage";
 @import "./layout/articles";
 @import "./layout/post";
 @import "./layout/portfolio";
+@import "./layout/error_404";
