--- a/assets/static/sass/helper/_variables.scss
+++ b/assets/static/sass/helper/_variables.scss
@@ -64,6 +64,12 @@ $portfolio-banner-color3: rgb(228, 159, 245);
 $portfolio-title-color: rgb(116, 7, 7);
 $portfolio-color: rgb(248, 248, 248);
 
+$error404-banner-color1: rgb(190, 190, 190);
+$error404-banner-color2: rgb(247, 247, 247);
+$error404-banner-color3: rgb(219, 219, 219);
+$error404-title-color: rgb(50, 50, 50);
+$error404-color: rgb(248, 248, 248);
+
 $sidebar-color1: rgb(209, 234, 255);
 $sidebar-color-mid: rgb(165, 209, 230);
 $sidebar-color2: rgb(136, 207, 166);
