[UPDATE] add disqus

--- a/assets/static/sass/_style.scss
+++ b/assets/static/sass/_style.scss
@@ -34,6 +34,7 @@
 @import "./components/post/adjacent_post";
 @import "./components/post/modal";
 @import "./components/post/tag";
+@import "./components/post/comments";
 
 @import "./components/portfolio/banner";
 
