--- a/templates/home.html
+++ b/templates/home.html
@@ -49,7 +49,7 @@
         </div>
         <div class="card profile-card">
           <h3>About me</h3>
-          <p class="preview">{{ this.about }}</p>
+          <p class="preview">{{ '<br />'.join(this.about.strip().split('\n'))|safe }}</p>
         </div>
         <div class="card contact-card">
           <h3>Contact me</h3>
@@ -76,7 +76,7 @@
         </div>
         <div class="card project-card">
           <h3>Projects</h3>
-          <p class="preview">some projects here</p>
+          <p class="preview">Comming soon</p>
         </div>
       </div>
     </section>
