[UPDATE] add admonition

--- a/assets/static/sass/_style.scss
+++ b/assets/static/sass/_style.scss
@@ -14,6 +14,7 @@
 @import "./components/placeholder";
 @import "./components/scroll_top";
 @import "./components/pagination";
+@import "./components/admonition";
 
 @import "./components/homepage/banner";
 @import "./components/homepage/card_deck";
