--- a/assets/static/sass/helper/_variables.scss
+++ b/assets/static/sass/helper/_variables.scss
@@ -76,6 +76,15 @@ $sidebar-color2: rgb(136, 207, 166);
 $sidebar-handle-color: rgb(203, 234, 240);
 $sidebar-ui-color: rgb(0, 63, 37);
 
+$admonition-note-color: rgba(218, 231, 245, 0.8);
+$admonition-info-color: rgba(222, 245, 207, 0.8);
+$admonition-tip-color: rgb(247, 236, 216, 0.8);
+$admonition-warning-color: rgba(245, 224, 223, 0.8);
+$admonition-note-ui-color: rgba(3, 44, 83, 0.7);
+$admonition-info-ui-color: rgba(17, 68, 0, 0.7);
+$admonition-tip-ui-color: rgba(71, 45, 0, 0.7);
+$admonition-warning-ui-color: rgba(75, 5, 0, 0.7);
+
 $color1: rgb(255, 219, 219);
 $color2: rgb(227, 234, 255);
 $color3: rgb(238, 255, 206);
@@ -88,6 +97,7 @@ $post-font: "Maven Pro", "FakePearl", sans-serif;
 $brand-font: "Comfortaa", "Maven Pro", "FakePearl", sans-serif;
 $mono-font: "Ubuntu Mono", monospace;
 $title-font: "Exo 2", "Maven Pro", "Noto Sans TC", sans-serif;
+$icon-font: "Font Awesome 5 Free", "Maven Pro", "Noto Sans TC", sans-serif;
 
 $brk-x-huge: 1296px;
 $brk-huge: 1080px;
