--- a/templates/layout-normal.html
+++ b/templates/layout-normal.html
@@ -16,13 +16,10 @@
             {{ render_categories() }}
           </li>
           <li>
-            <a href="#">Archives</a>
+            <a href="mailto:25349023.qq@gmail.com">Contact Me</a>
           </li>
           <li>
-            <a href="#">Contact Me</a>
-          </li>
-          <li>
-            <a href="#"><i class="fab fa-github"></i> GitHub</a>
+            <a href="https://github.com/25349023/"><i class="fab fa-github"></i> GitHub</a>
           </li>
         </ul>
       </nav>
