--- a/templates/macros/card.html
+++ b/templates/macros/card.html
@@ -11,7 +11,7 @@
   <a class="card">
     <h3>Empty</h3>
     <p class="preview">
-      There is no post yet.
+      There is no other post yet.
     </p>
   </a>
 {% endmacro %}
