--- a/assets/static/sass/components/homepage/_card_deck.scss
+++ b/assets/static/sass/components/homepage/_card_deck.scss
@@ -71,8 +71,10 @@
     margin: 0;
     margin-top: 1rem;
     height: 12.5rem;
+
     overflow-y: hidden;
     text-overflow: ellipsis;
+    overflow-wrap: anywhere;
 
     font-size: 1.2rem;
     line-height: 1.3;
