--- a/assets/static/style.css
+++ b/assets/static/style.css
@@ -946,6 +946,7 @@ aside nav > ul .collapsible-category ul a {
   height: 12.5rem;
   overflow-y: hidden;
   text-overflow: ellipsis;
+  overflow-wrap: anywhere;
   font-size: 1.2rem;
   line-height: 1.3;
   font-family: "Maven Pro", "FakePearl", sans-serif;
@@ -1321,6 +1322,7 @@ aside nav > ul .collapsible-category ul a {
   margin: 0;
   max-height: 12rem;
   overflow: hidden;
+  overflow-wrap: anywhere;
   font-family: "Maven Pro", "FakePearl", sans-serif;
   font-size: 1.3rem;
   line-height: 1.5;
