--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,6 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>{% block title %}{% endblock %}</title>
 
+  <link rel="apple-touch-icon" sizes="180x180" href="{{ '/static/apple-touch-icon.png'|url }}">
+  <link rel="icon" type="image/png" sizes="32x32" href="{{ '/static/favicon-32x32.png'|url }}">
+  <link rel="icon" type="image/png" sizes="16x16" href="{{ '/static/favicon-16x16.png'|url }}">
+  <link rel="manifest" href="{{ '/static/site.webmanifest'|url }}">
+  <link rel="mask-icon" href="{{ '/static/safari-pinned-tab.svg'|url }}" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
+
   <link rel="stylesheet" href="{{ '/static/style.css'|url }}">
   <link rel="preconnect" href="https://fonts.gstatic.com"/>
   <link
