[FIX] some styles

--- a/assets/static/sass/components/_admonition.scss
+++ b/assets/static/sass/components/_admonition.scss
@@ -28,7 +28,7 @@
     color: $admonition-info-ui-color;
 
     &:before {
-      content: '\f0eb  Info';
+      content: '\f0eb  Tip';
     }
   }
 
