[UPDATE] publish a post

--- a/assets/static/sass/components/post/_post_content.scss
+++ b/assets/static/sass/components/post/_post_content.scss
@@ -174,4 +174,8 @@
     border: none;
     border-bottom: 1px solid rgba($postpage-ui-color, 0.3);
   }
+
+  del {
+    color: rgba($postpage-ui-color, 0.6);
+  }
 }
