--- a/assets/static/sass/components/homepage/_about.scss
+++ b/assets/static/sass/components/homepage/_about.scss
@@ -105,7 +105,7 @@
   .card.skill-card {
     .preview {
       display: grid;
-      grid-template-columns: 1fr 1fr;
+      grid-template-columns: repeat(2, minmax(0,  1fr));
       grid-auto-rows: 3rem;
       padding: 0 1rem;
 
