--- a/assets/static/sass/layout/_homepage.scss
+++ b/assets/static/sass/layout/_homepage.scss
@@ -39,16 +39,16 @@
       display: grid;
       grid-auto-flow: dense;
       grid-template-rows: 1fr 1fr;
-      grid-template-columns: repeat(3, 1fr);
+      grid-template-columns: repeat(3, minmax(0,  1fr));
       row-gap: 0.3rem;
       column-gap: 0.3rem;
 
       @include brk-down($brk-huge) {
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: repeat(2, minmax(0,  1fr));
       }
 
       @include brk-down($brk-small) {
-        grid-template-columns: 1fr;
+        grid-template-columns: minmax(0,  1fr);
         grid-template-rows: 0.6fr 1fr;
       }
 
