--- a/assets/static/sass/components/post/_post_content.scss
+++ b/assets/static/sass/components/post/_post_content.scss
@@ -165,7 +165,7 @@
 
   :not(pre) > code {
     border-radius: 3px;
-    padding: 0 0.4rem 0.1rem;
+    padding: 0.08rem 0.4rem 0.1rem;
     background-color: rgba($postpage-ui-color, 0.1);
   }
 
