--- a/assets/static/sass/components/post/_post_content_large.scss
+++ b/assets/static/sass/components/post/_post_content_large.scss
@@ -42,13 +42,10 @@
       max-width: 60%;
     }
 
-    pre code {
+    code, pre code, .number-list {
       font-size: 1.1rem;
     }
 
-    code {
-      font-size: 1.1rem;
-    }
 
     hr {
       margin: 0.8rem 0;
