--- a/assets/static/sass/layout/_post.scss
+++ b/assets/static/sass/layout/_post.scss
@@ -51,7 +51,7 @@
 
       .info {
         display: flex;
-        align-items: baseline;
+        align-items: flex-end;
         padding-bottom: 0.2rem;
         margin-bottom: 2rem;
         border-bottom: 1px solid rgba($postpage-ui-color, 0.2);
@@ -63,6 +63,7 @@
 
         @include brk-down($brk-large) {
           flex-flow: column;
+          align-items: flex-start;
           margin-bottom: 1rem;
         }
       }
@@ -108,9 +109,10 @@
       }
 
       .meta-data {
-        margin-left: 1rem;
+        margin: 0 0 0.3rem 1rem;
         font-size: 1.2rem;
         color: rgba($postpage-ui-color, 0.6);
+        white-space: nowrap;
 
         @include brk-down($brk-large) {
           margin: 0.6rem 0 0.3rem;
