[UPDATE] new post: algo-dfs-permutation; fix some style; imp new anchor-plugin

--- a/assets/static/sass/components/post/_post_content.scss
+++ b/assets/static/sass/components/post/_post_content.scss
@@ -98,8 +98,12 @@
     margin-top: 2rem;
   }
 
-  li p:last-of-type {
-    margin-bottom: 0;
+  li :last-child {
+    margin-bottom: 0.4rem;
+  }
+
+  li:not(:last-of-type) {
+    margin-bottom: 0.2rem;
   }
 
   blockquote {
