--- a/assets/static/sass/helper/_variables.scss
+++ b/assets/static/sass/helper/_variables.scss
@@ -95,7 +95,7 @@ $footer-text-color: rgb(255, 249, 240);
 $default-font: "Maven Pro", "Noto Sans TC", sans-serif;
 $post-font: "Maven Pro", "FakePearl", sans-serif;
 $brand-font: "Comfortaa", "Maven Pro", "FakePearl", sans-serif;
-$mono-font: "Ubuntu Mono", monospace;
+$mono-font: "Ubuntu Mono", "FakePearl", monospace;
 $title-font: "Exo 2", "Maven Pro", "Noto Sans TC", sans-serif;
 $icon-font: "Font Awesome 5 Free", "Maven Pro", "Noto Sans TC", sans-serif;
 
