[FIX] monospace font size

--- a/assets/static/sass/components/post/_post_content_large.scss
+++ b/assets/static/sass/components/post/_post_content_large.scss
@@ -42,7 +42,7 @@
       max-width: 60%;
     }
 
-    code, pre code, .number-list {
+    p code, blockquote code, pre code, .number-list {
       font-size: 1.1rem;
     }
 
