--- a/assets/static/style.css
+++ b/assets/static/style.css
@@ -1855,9 +1855,16 @@ aside nav > ul .collapsible-category ul a {
   text-align: right;
   right: 0;
   padding-left: 1rem;
+  font-family: "Maven Pro", "FakePearl", sans-serif;
 }
 .postpage .toc li {
   display: block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+.postpage .toc li:nth-of-type(n + 1) {
+  margin-top: 0.2rem;
 }
 .postpage .toc li a {
   text-decoration: none;
@@ -1893,7 +1900,7 @@ aside nav > ul .collapsible-category ul a {
   font-size: 0.9rem;
 }
 .postpage .toc > li > ul > li > ul > li a {
-  color: rgba(92, 68, 58, 0.7);
+  color: rgba(92, 68, 58, 0.6);
 }
 
 .postpage .adjacent-posts {
