[UPDATE] new post: amayadori; fix some bug of ruby block

--- a/assets/static/sass/components/articles/_post.scss
+++ b/assets/static/sass/components/articles/_post.scss
@@ -104,7 +104,7 @@
 
   .preview {
     margin: 0;
-    max-height: 12rem;
+    height: 12rem;
     overflow: hidden;
     overflow-wrap: anywhere;
 
