[UPDATE] new post: answer-ikura; adjust some style

--- a/assets/static/sass/components/post/_post_content.scss
+++ b/assets/static/sass/components/post/_post_content.scss
@@ -194,6 +194,12 @@
 
   ruby rt {
     font-size: 0.5em;
+    ruby-align: center;
+    letter-spacing: 0.04rem;
+  }
+
+  iframe {
+    margin-bottom: 0.8rem;
   }
 
   .fa-sticky-note {
